<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragment.MainFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="34dp"
        app:layout_constraintBottom_toTopOf="@id/cont"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:maxLines="1"
            android:text="@string/oh"
            android:textColor="@color/white"
            android:textSize="80sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:weightSum="4"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Ac"
                style="@style/grey.Button"
                android:text="@string/Ac"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus_and_m"
                style="@style/grey.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/plus_and_m" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/proth"
                style="@style/grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/percent"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/division"
                style="@style/orange.Button"
                android:text="@string/division" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:weightSum="4"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven"
                style="@style/grey_dark.Button"
                android:text="@string/seven"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight"
                style="@style/grey_dark.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/eight"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                style="@style/grey_dark.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiplication"
                style="@style/orange.Button"
                android:text="@string/multiplication" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:weightSum="4"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four"
                style="@style/grey_dark.Button"
                android:text="@string/four"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five"
                style="@style/grey_dark.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/five"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                style="@style/grey_dark.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                style="@style/orange.Button"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:weightSum="4"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                style="@style/grey_dark.Button"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two"
                style="@style/grey_dark.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/two"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                style="@style/grey_dark.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/three"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                style="@style/orange.Button"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="6dp"
            android:weightSum="4"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/oh"
                style="@style/grey_dark.Button"
                android:layout_width="18dp"
                android:layout_weight="2"
                android:text="@string/oh" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/point"
                style="@style/grey_dark.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/point"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/is_result"
                style="@style/orange.Button"
                android:text="@string/is" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>